deploy/k8s/helm/apigwmm/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: eshop_backend_route
            virtual_hosts:
            - name: eshop_backend
              domains:
              - "*"
              routes:
              - name: "m-short"
                match:
                  prefix: "/m/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/marketing-api/"
                  cluster: marketing
              - name: "m-long"
                match:
                  prefix: "/marketing-api/"
                route:
                  auto_host_rewrite: true
                  cluster: marketing
              - name: "l-short"
                match:
                  prefix: "/l/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/locations-api/"
                  cluster: locations
              - name: "l-long"
                match:
                  prefix: "/locations-api/"
                route:
                  auto_host_rewrite: true
                  cluster: locations
          http_filters:
          - name: envoy.router  
          access_log:
          - name: envoy.file_access_log
            filter:
              not_health_check_filter: {}          
            config:
              json_format:
                time: "%START_TIME%"
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"  
                request_host: "%REQ(HOST)%"  
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%" 
                response_flags: "%RESPONSE_FLAGS%"
                route_name: "%ROUTE_NAME%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"    
              path: "/tmp/access.log"                 
  clusters:
  - name: marketing
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: marketing-api
        port_value: 80
  - name: locations
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: locations-api
        port_value: 80
